--- a/TODO
+++ b/TODO
@@ -3,41 +3,23 @@ be fixed (or ignored when irrelevant) before the nick_0_3 branch
 can move to trunk. When the branch enters trunk, it's important
 we work towards a stable version, so we can release a 0.2.90.1
 (0.3 beta 1) version as soon as possible (if needed, independent
-from the Xfce schedule).
+from the Xfce release schedule).
 
 
 Interface
 =========
-- Tab font color when the file is modified or read only.
 - Test the application with a screen reader and add Atk objects
   where needed.
-- Cleanup the menus and make them consistent. For example: we're
-  using both file and document atm. The name of the Go menu should
-  also be changed to something more descriptive.
-- Make the mnemonic's consistent all over the application and make
-  sure they don't conflict inside a dialog/window.
 - Check the search and replace code for bugs.
 - Add option to disable the search feedback in the replace dialog
   (highlight, count matches, type-ahead). This can slow down mousepad
-  with large text files.
-
-
-Undo
-====
-- Need to fix a couple of issues here. I'm not really satisfied with
-  it right now.
-
-
-Code
-====
-- Check for code duplication and make sure the comments are worth
-  reading.
+  with (multiple) large documents.
+- Transpose words works a bit odd sometimes.
+- Improve replace (all) in selection.
 
 
 Saving and loading
 ==================
-- Save All option.
-- Check if the file is externally modified when switching tabs.
 - Cleanup and improve encoding support and order the encoding types.
 
 
@@ -45,23 +27,16 @@ Other
 =====
 - We need a cool Mousepad logo.
 - Write documentation.
-- Session manager support.
+- Session manager support (waiting for Gtk+ here).
 
 
 Testing and polishing
 =====================
-- Profiling the startup time. We can possibly use Frederico's trick
-  to optimize the startup time:
-  http://primates.ximian.com/~federico/news-2006-03.html#09
 - Profiling loading large files (Gtk/Pango has a problem here). This
   also locks some dialogs.
 - Checking for memory leaks.
-- Make sure objects are unrefed when their parent is destroyed, Gtk+
-  does not always take care of this.
 
 
 Feature
 =======
-- Maybe a plugin based system for syntax highlighting and GtkSpell.
-  We cannot use GtkSourceView with this implementation, because it
-  cannot attach to an existing textview (GtkSpell can).
+- You'll never know. No promisses here...
