--- a/po/am.po
+++ b/po/am.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: mousepad 0.2.12\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-20 12:34+0100\n"
-"PO-Revision-Date: 2007-07-07 10:42+0100\n"
-"Last-Translator: tegegne tefera <tefera@mekuria.com>\n"
+"PO-Revision-Date: 2008-01-06 18:35+0100\n"
+"Last-Translator: Tegegne Tefera <tefera@mekuria.com>\n"
 "Language-Team: Amharic <l10n-am@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -125,11 +125,11 @@ msgstr "/_ፈልግ"
 
 #: ../src/menu.c:111
 msgid "/Search/_Find..."
-msgstr "/_ፈልግ/አግኝ_F"
+msgstr "/ፈልግ/አግኝ_F..."
 
 #: ../src/menu.c:113
 msgid "/Search/Find _Next"
-msgstr "/_ፈልግ/የሚቀጥለውን አግኝ_N"
+msgstr "/ፈልግ/የሚቀጥለውን አግኝ_N"
 
 #: ../src/menu.c:115
 msgid "/Search/Find _Previous"
@@ -137,7 +137,7 @@ msgstr "/ፈልግ/የቀድሞውን አግኝ _P"
 
 #: ../src/menu.c:117
 msgid "/Search/_Replace..."
-msgstr "/_ፈልግ/ተካ_R"
+msgstr "/ፈልግ/ተካ_R"
 
 #: ../src/menu.c:121
 msgid "/Search/_Jump To..."
@@ -233,7 +233,7 @@ msgstr "ሌላ የኮድስም"
 
 #: ../src/selector.c:186
 msgid "Code_set:"
-msgstr "የኮድስም፦"
+msgstr "የኮድስም_s፦"
 
 #: ../src/selector.c:207
 #, c-format
