--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-12	Mike Massonnet <mmassonnet@xfce.org>
+
+	* nl.po: Fix Dutch typo (patch from Jacco Koning <xfce@menollo.nl>)
+
 2008-03-05	Mike Massonnet <mmassonnet@xfce.org>
 
 	* am.po: Update Amharic translation
