--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-14  Mike Massonnet <mmassonnet@xfce.org>
+
+	* ku.po: Update Kurdish translation (Erdal Ronahi)
+
 2008-04-12  Mike Massonnet <mmassonnet@xfce.org>
 
     * lv.po: Update Latvian translation (Rihards Prieditis <rprieditis@gmail.com>)
