update slovak translation
(Old svn revision: 26961)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,10 +1,14 @@
+2008-05-15  Mike Massonnet <mmassonnet@xfce.org>
+
+	* sk.po: Update Slovak translation (Stefan Miklosov)
+
 2008-05-14  Mike Massonnet <mmassonnet@xfce.org>
 
 	* ku.po: Update Kurdish translation (Erdal Ronahi)
 
 2008-04-12  Mike Massonnet <mmassonnet@xfce.org>
 
-    * lv.po: Update Latvian translation (Rihards Prieditis <rprieditis@gmail.com>)
+	* lv.po: Update Latvian translation (Rihards Prieditis <rprieditis@gmail.com>)
 
 2008-04-12	Mike Massonnet <mmassonnet@xfce.org>
 
