--- a/po/sk.po
+++ b/po/sk.po
@@ -2,15 +2,16 @@
 # Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Roman Moravcik <roman.moravcik@gmail.com>, 2005.
+# Stefan Miklosovic <miklosovic@gmail.com>, 2008.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: mousepad 0.2.12\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-20 12:34+0100\n"
-"PO-Revision-Date: 2006-05-02 20:13+0200\n"
-"Last-Translator: Roman Moravcik <roman.moravcik@gmail.com>\n"
-"Language-Team: Slovak <sk-i18n@linux.sk>\n"
+"PO-Revision-Date: 2008-05-15 19:22+0200\n"
+"Last-Translator: stewe <(null)>\n"
+"Language-Team: English <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -59,18 +60,16 @@ msgid "/File/_New"
 msgstr "/Súbor/_Nový"
 
 #: ../src/menu.c:66
-#, fuzzy
 msgid "/File/New _Window"
-msgstr "/Súbor/_Nový"
+msgstr "/Súbor/Nové o_kno"
 
 #: ../src/menu.c:69
 msgid "/File/_Open..."
 msgstr "/Súbor/_Otvoriť..."
 
 #: ../src/menu.c:72
-#, fuzzy
 msgid "/File/Open _Recent"
-msgstr "/Súbor/_Otvoriť..."
+msgstr "/Súbor/Otvoriť N_edávny..."
 
 #: ../src/menu.c:77
 msgid "/File/_Save"
@@ -191,7 +190,7 @@ msgstr "Nájsť"
 
 #: ../src/search.c:200 ../src/search.c:265
 msgid "Fi_nd what: "
-msgstr "Hľadať: "
+msgstr "_Hľadať: "
 
 #: ../src/search.c:219 ../src/search.c:292
 msgid "_Match case"
@@ -203,7 +202,7 @@ msgstr "Nahradiť"
 
 #: ../src/search.c:280
 msgid "Re_place with: "
-msgstr "Nahradiť s:"
+msgstr "_Nahradiť s:"
 
 #: ../src/search.c:296
 msgid "Replace _all at once"
@@ -264,6 +263,7 @@ msgstr "Súbor '%s' už existuje. Chcete ho prepísať?"
 #: ../src/window.c:110
 msgid "Warning, you are using the root account, you may harm your system."
 msgstr ""
+"Upozornenie, používate administrátorské práva, môžete poškodiť váš systém."
 
 #: ../src/window.c:169
 msgid "Untitled"
