--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-18  Mike Massonnet <mmassonnet@xfce.org>
+
+	* LINGUAS, da.po: Update Danish translation (Ole Guldberg Jensen)
+
 2008-05-15  Mike Massonnet <mmassonnet@xfce.org>
 
 	* sk.po: Update Slovak translation (Stefan Miklosov)
