--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,7 @@
 2008-05-18  Mike Massonnet <mmassonnet@xfce.org>
 
 	* LINGUAS, da.po: Update Danish translation (Ole Guldberg Jensen)
+	* ja.po: Update Japanese translation (Nobuhiro Iwamatsu)
 
 2008-05-15  Mike Massonnet <mmassonnet@xfce.org>
 
