--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-22  Mike Massonnet <mmassonnet@xfce.org>
+
+	* id.po, LINGUAS: Add Indonesian translation (Andhika Padmawan)
+
 2008-05-18  Mike Massonnet <mmassonnet@xfce.org>
 
 	* LINGUAS, da.po: Update Danish translation (Ole Guldberg Jensen)
