--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-12  Og Maciel <ogmaciel@gnome.org>
+
+    * pt_BR.po: Updated Brazilian Portuguese translation by Fábio Nogueira
+
 2008-06-26  Maximilian Schleiss <maximilian@xfce.org>
 
 	* gl.po: Galician translation updated (Leandro Regueiro)
