--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-10  Maximilian Schleiss <maximilian@xfce.org>
+
+	* id.po: Indonesian translation updated (Andhika Padmawan)
+
 2008-07-15  Maximilian Schleiss <maximilian@xfce.org>
 
 	* gl.po: Galician translation updated (Leandro Regueiro)
